# hdz-auth

./: .gitignore  CHANGELOG.md  MIGRATION.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
python/: pyproject.toml
python/src/hdz_auth/: __init__.py  config.py  fastapi.py  jwt.py  router.py  token.py
python/tests/: test_jwt.py
ts/: package.json
ts/src/: api-client.ts  auth-service.ts  google-sign-in.ts  index.ts  jwt.test.ts  jwt.ts  supabase-client.ts  tauri-plugin-store.d.ts  types.ts
ts/src/storage/: Wormhole.code-workspace  tauri.ts  uni.ts  web.ts
