[project]
name = "hdz-auth"
version = "0.1.0"
description = "Shared Supabase auth for Fashion, Wormhole, and FastAPI services"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "supabase",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hdz_auth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
